--- a/ChatApp-Server/package.json
+++ b/ChatApp-Server/package.json
@@ -7,23 +7,13 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon"
   },
-  "author": "Riya Saxena",
+  "author": "Parth Kamaria",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "mongodb": "^3.0.2",
+    "nodemon": "^1.18.10",
     "socket.io": "^2.0.4"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/riya305/Chat-App.git"
-  },
-  "keywords": [
-    "Socket"
-  ],
-  "bugs": {
-    "url": "https://github.com/riya305/Chat-App/issues"
-  },
-  "homepage": "https://github.com/riya305/Chat-App#readme"
+  }
 }
